# votnik

./: README.md  TODO  botlike-automator.cabal  stack.yaml  votnik.cabal
lib/: Botlike.hs
lib/Botlike/: AutomationDSL.hs
lib/Botlike/Automations/: Examples.hs
lib/Botlike/Implementations/: MVarKernel.hs  REST.hs  WebForm.hs
tests/Botlike/Implementations/: REST.hs
