name:                botlike-automator
version:             0.0.0.1
synopsis:            Interface for automations with simple dialogues
description:         Interface for automations with simple dialogues
homepage:            https://github.com/christian-marie/botlike-automator
license:             BSD3
license-file:        LICENSE
author:              Christian Marie <christian@ponies.io>
maintainer:          Christian Marie <christian@ponies.io>
copyright:           Christian Marie
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/christian-marie/botlike-automator

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Botlike,
                       Botlike.AutomationDSL,
                       Botlike.Implementations.REST,
                       Botlike.Implementations.WebForm,
                       Botlike.Automations.Examples
  build-depends:       base >=4.7 && < 5
                     , aeson
                     , bytestring
                     , digestive-functors
                     , digestive-functors-aeson
                     , digestive-functors-blaze
                     , digestive-functors-snap
                     , blaze-html
                     , mmorph
                     , containers
                     , dependent-sum
                     , time-locale-compat
                     , js-jquery
                     , pandoc
                     , snap-core
                     , snap-blaze
                     , snap-server
                     , http-client
                     , http-client-tls
                     , uuid
                     , lens
                     , servant-client
                     , servant
                     , servant-swagger-ui
                     , servant-server
                     , warp
                     , xhtml
                     , mtl
                     , wai
                     , servant-swagger
                     , swagger2
                     , transformers
                     , scientific
                     , time
                     , free
                     , text
                     , unordered-containers

test-suite unit
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             spec.hs
  build-depends:       base
                     , aeson
                     , aeson-qq
                     , pipes
                     , aeson-diff
                     , botlike-automator
                     , QuickCheck
                     , hspec
